crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_singles_mixed_quotes_class_var_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_class_var_1.py:2:5
  |
1 | class SingleLineDocstrings():
2 |     ''"Start with empty string" ' and lint docstring safely'
  |     ^^
3 |     ''' Not a docstring '''
  |
help: Replace single quotes docstring with double quotes

Q002 [*] Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_class_var_1.py:2:33
  |
1 | class SingleLineDocstrings():
2 |     ''"Start with empty string" ' and lint docstring safely'
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 |     ''' Not a docstring '''
  |
help: Replace single quotes docstring with double quotes
  |
1 | class SingleLineDocstrings():
  -     ''"Start with empty string" ' and lint docstring safely'
2 +     ''"Start with empty string" " and lint docstring safely"
3 |     ''' Not a docstring '''
  |

Q002 Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_class_var_1.py:6:9
  |
5 |     def foo(self, bar='''not a docstring'''):
6 |         ''"Start with empty string" ' and lint docstring safely'
  |         ^^
7 |         pass
  |
help: Replace single quotes docstring with double quotes

Q002 [*] Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_class_var_1.py:6:37
  |
5 |     def foo(self, bar='''not a docstring'''):
6 |         ''"Start with empty string" ' and lint docstring safely'
  |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 |         pass
  |
help: Replace single quotes docstring with double quotes
  |
5 |     def foo(self, bar='''not a docstring'''):
  -         ''"Start with empty string" ' and lint docstring safely'
6 +         ''"Start with empty string" " and lint docstring safely"
7 |         pass
  |

Q002 Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_class_var_1.py:9:29
  |
7 |         pass
8 |
9 |     class Nested(foo()[:]): ''"Start with empty string" ' and lint docstring safely'; pass
  |                             ^^
help: Replace single quotes docstring with double quotes

Q002 [*] Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_class_var_1.py:9:57
  |
7 |         pass
8 |
9 |     class Nested(foo()[:]): ''"Start with empty string" ' and lint docstring safely'; pass
  |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace single quotes docstring with double quotes
   |
8  |
   -     class Nested(foo()[:]): ''"Start with empty string" ' and lint docstring safely'; pass
9  +     class Nested(foo()[:]): ''"Start with empty string" " and lint docstring safely"; pass
10 |
   |

Q002 Single quote docstring found but double quotes preferred
  --> docstring_singles_mixed_quotes_class_var_1.py:13:7
   |
12 | class StartWithEmptyStringInPreferredQuotes():
13 |     ""'Start with empty string' ' and lint docstring safely'
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 |     def foo(self):
   |
help: Replace single quotes docstring with double quotes

Q002 [*] Single quote docstring found but double quotes preferred
  --> docstring_singles_mixed_quotes_class_var_1.py:13:33
   |
12 | class StartWithEmptyStringInPreferredQuotes():
13 |     ""'Start with empty string' ' and lint docstring safely'
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 |     def foo(self):
   |
help: Replace single quotes docstring with double quotes
   |
12 | class StartWithEmptyStringInPreferredQuotes():
   -     ""'Start with empty string' ' and lint docstring safely'
13 +     ""'Start with empty string' " and lint docstring safely"
14 |
   |

Q002 Single quote docstring found but double quotes preferred
  --> docstring_singles_mixed_quotes_class_var_1.py:16:11
   |
15 |     def foo(self):
16 |         ""''' Start with empty string and lint docstring safely '''
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
17 |         pass
   |
help: Replace single quotes docstring with double quotes
