crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles_mixed_quotes_class_var_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 Double quote docstring found but single quotes preferred
 --> docstring_doubles_mixed_quotes_class_var_1.py:2:5
  |
1 | class SingleLineDocstrings():
2 |     ""'Start with empty string' ' and lint docstring safely'
  |     ^^
3 |     """ Not a docstring """
  |
help: Replace double quotes docstring with single quotes

Q002 Double quote docstring found but single quotes preferred
 --> docstring_doubles_mixed_quotes_class_var_1.py:6:9
  |
5 |     def foo(self, bar="""not a docstring"""):
6 |         ""'Start with empty string' ' and lint docstring safely'
  |         ^^
7 |         pass
  |
help: Replace double quotes docstring with single quotes

Q002 Double quote docstring found but single quotes preferred
 --> docstring_doubles_mixed_quotes_class_var_1.py:9:29
  |
7 |         pass
8 |
9 |     class Nested(foo()[:]): ""'Start with empty string' ' and lint docstring safely'; pass
  |                             ^^
help: Replace double quotes docstring with single quotes

Q002 Double quote docstring found but single quotes preferred
  --> docstring_doubles_mixed_quotes_class_var_1.py:13:7
   |
12 | class StartWithEmptyStringInPreferredQuotes():
13 |     ''"Start with empty string" " and lint docstring safely"
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 |     def foo(self):
   |
help: Replace double quotes docstring with single quotes

Q002 [*] Double quote docstring found but single quotes preferred
  --> docstring_doubles_mixed_quotes_class_var_1.py:13:33
   |
12 | class StartWithEmptyStringInPreferredQuotes():
13 |     ''"Start with empty string" " and lint docstring safely"
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 |     def foo(self):
   |
help: Replace double quotes docstring with single quotes
   |
12 | class StartWithEmptyStringInPreferredQuotes():
   -     ''"Start with empty string" " and lint docstring safely"
13 +     ''"Start with empty string" ' and lint docstring safely'
14 |
   |

Q002 Double quote docstring found but single quotes preferred
  --> docstring_doubles_mixed_quotes_class_var_1.py:16:11
   |
15 |     def foo(self):
16 |         ''""" Start with empty string and lint docstring safely """
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
17 |         pass
   |
help: Replace double quotes docstring with single quotes
