crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_doubles_over_singles_multiline_string.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q001 [*] Single quote multiline found but double quotes preferred
 --> singles_multiline_string.py:1:5
  |
1 |   s = ''' This 'should'
  |  _____^
2 | | be
3 | | 'linted' '''
  | |____________^
4 |
5 |   s = """ This 'should'
  |
help: Replace single multiline quotes with double quotes
  |
  - s = ''' This 'should'
1 + s = """ This 'should'
2 | be
  - 'linted' '''
3 + 'linted' """
4 |
  |

Q001 [*] Single quote multiline found but double quotes preferred
  --> singles_multiline_string.py:11:7
   |
 9 | s = '''"This should not be linted due to having would-be quadruple end quote"'''
10 |
11 | s = ""'''This should be linted, and fixed without a would-be quintuple start quote'''
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 | s = ""u'''This should be linted, and fixed without a would-be quintuple start quote'''
   |
help: Replace single multiline quotes with double quotes
   |
10 |
   - s = ""'''This should be linted, and fixed without a would-be quintuple start quote'''
11 + s = "" """This should be linted, and fixed without a would-be quintuple start quote"""
12 | s = ""u'''This should be linted, and fixed without a would-be quintuple start quote'''
   |

Q001 [*] Single quote multiline found but double quotes preferred
  --> singles_multiline_string.py:12:7
   |
11 | s = ""'''This should be linted, and fixed without a would-be quintuple start quote'''
12 | s = ""u'''This should be linted, and fixed without a would-be quintuple start quote'''
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace single multiline quotes with double quotes
   |
11 | s = ""'''This should be linted, and fixed without a would-be quintuple start quote'''
   - s = ""u'''This should be linted, and fixed without a would-be quintuple start quote'''
12 + s = ""u"""This should be linted, and fixed without a would-be quintuple start quote"""
   |
